--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,5 @@
 title: "Camera2B"
 description: "Berlin's Photography Adventures"
-baseurl: "/camera2b" # Change if needed
-#url: "https://yourdomain.com" # Update with your actual domain
-theme: jekyll-theme-minimal
-author: "Berlin"
-show_downloads: false
+remote_theme: pages-themes/hacker@v0.2.0
+plugins:
+- jekyll-remote-theme # add this line to the plugins list if you already have one
